# cp4bal

./: README.md  pyproject.toml
config/dataset/: cora_ml.yaml  csbm-1.yaml  csbm-10.yaml  csbm-11.yaml  csbm-12.yaml  csbm-13.yaml  csbm-14.yaml  csbm-15.yaml  csbm-16.yaml  csbm-17.yaml  csbm-18.yaml  csbm-19.yaml  csbm-2.yaml  csbm-3.yaml  csbm-4.yaml  csbm-5.yaml  csbm-6.yaml  csbm-7.yaml  csbm-8.yaml  csbm-9.yaml  csbm.yaml
config/model/: bayes_optimal.yaml  gcn.yaml  sgc.yaml
script/: batch_array.sh  format.sh  job.sh  run.sh  sensitivity_to_b.py
src/cp4bal/: active_learning.py  enums.py  main.py  mean_field_error.py
src/cp4bal/acquisition/: __init__.py  approximate_uncertainty.py  approximate_uncertainty_cp.py  attribute.py  base.py  configs.py  coreset.py  degree.py  energy.py  entropy.py  enums.py  factory.py  least_confidence.py  margin.py  oracle_uncertainty.py  oracle_uncertainty_cp.py  random.py
src/cp4bal/dataset/: __init__.py  base.py  configs.py  csbm.py  enums.py  factory.py  funcs.py  torch_geometric.py
src/cp4bal/model/: __init__.py  base.py  bayes_optimal.py  cache.py  configs.py  enums.py  factory.py  gcn.py  prediction.py  sgc.py
src/cp4bal/model/trainer/: __init__.py  adam.py  base.py  configs.py  enums.py  factory.py  gt_trainer.py  loss_fn.py  sgc.py  sgd.py
src/cp4bal/util/: auc_logger.py  config_builder.py  configs.py  data.py  enums.py  logger.py  logger_config.yaml  logger_config_console.yaml  options.py  paths.py  seed.py  writer.py
src/plot/: b_sensitivity.py  constant.py  mean_field_error.py  mean_field_error_scatter.py  plot_mean.py  plot_mean_and_std.py  results.py  results_al_performance.py  results_auc_diff.py  results_b_sensitivity.py  summary_b_sensitivity.py  types_.py  utils.py
