[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cp4bal"]

[project]
name = "cp4bal"
version = "0.1.0"
description = "Confidence Propagation for Batch Active Learning on Graphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "F722",
]
