[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cp4bal", "src/plot"]

[project]
name = "cp4bal"
version = "0.1.0"
description = "Confidence Propagation for Batch Active Learning on Graphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "pyyaml>=6.0.2",
    "torch>=2.8.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "pyg-lib>=0.4.0",
    "pandas>=2.3.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "F722",
]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.8.0+cu126.html"]
